Initial local setup
Fix scss deprecation console warnings

Ensures params are awaited in page components

Awaits the `params` prop within `generateMetadata` and page components to ensure that the parameters are fully resolved before being used. This prevents potential issues where asynchronous operations dependent on the parameters might fail due to unfulfilled dependencies.

Updates the way `headers` are handled to fix type issues.

Install Tailwind

Refactors layout to use a shared app context

Moves shared providers and analytics setup to a central app context.
This improves code organization and reduces redundancy in the layout component.
Also introduces a global header component for consistent site-wide presentation.

--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
         "@prezly/uploadcare-image": "0.3.2",
         "@react-hookz/web": "14.7.1",
         "@sentry/nextjs": "9.12.0",
+        "@tailwindcss/cli": "4.1.18",
+        "@tailwindcss/postcss": "4.1.18",
         "@uploadcare/nextjs-loader": "1.0.0",
         "classnames": "2.5.1",
         "html-to-text": "9.0.5",
@@ -50,6 +52,7 @@
         "react-instantsearch-dom": "6.40.4",
         "server-only": "0.0.1",
         "social-links": "1.15.1",
+        "tailwindcss": "4.1.18",
         "tinycolor2": "1.6.0",
         "url-pattern": "1.0.3",
         "vanilla-cookieconsent": "3.1.0",
