--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "@tailwindcss/postcss": "4.1.18",
         "@uploadcare/nextjs-loader": "1.0.0",
         "classnames": "2.5.1",
+        "clsx": "2.1.1",
         "html-to-text": "9.0.5",
         "js-cookie": "3.0.5",
         "lucide-react": "0.479.0",
@@ -52,6 +53,7 @@
         "react-instantsearch-dom": "6.40.4",
         "server-only": "0.0.1",
         "social-links": "1.15.1",
+        "tailwind-merge": "3.4.0",
         "tailwindcss": "4.1.18",
         "tinycolor2": "1.6.0",
         "url-pattern": "1.0.3",
