Moves Contacts and Media Resources to layout
Relocates the Contacts module and introduces a new GlobalMediaResources component within the main layout.

This ensures that these elements are consistently displayed across all pages, improving the user experience by providing easy access to media resources and contact information.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "theme-nextjs-bea",
+    "name": "theme-nextjs-ferguson",
     "version": "1.1.0",
     "engines": {
         "node": "^20.x",
